--- a/htdocs/CSM/stylelogin.css
+++ b/htdocs/CSM/stylelogin.css
@@ -11,6 +11,7 @@ h1 {
     text-align: center; 
     color: #333; 
     margin-bottom: 20px; 
+    padding-left: 15px;
 }
 
 #error-message_login {
@@ -20,13 +21,15 @@ h1 {
 form {
     background-color: rgba(255, 255, 255, 0.9); 
     border-radius: 10px;
-    padding: 20px;
+    padding: 15px;
     width: 300px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center; 
+    margin-left:25px;
+    padding-left: 5px;
 }
 
 form input[type="text"],
@@ -36,6 +39,7 @@ form button {
     padding: 10px;
     width: calc(100% - 20px); 
     box-sizing: border-box; 
+    margin-left: 20px;
 }
 
 form input[type="submit"],
