--- a/htdocs/CSM/style.css
+++ b/htdocs/CSM/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
+    background-color:#ffd000;
 }
 h1 {
     
@@ -17,6 +18,13 @@ h2{
     font-size: 25px;
     margin-left: 50px;
     text-decoration: none;
+    padding-top: -20px;
+}
+h3{
+    background-color: rgb(55, 120, 218);
+    height: 10%;
+    padding-top: 5%;
+    position: relative;
 }
 p{
     font-family:  Georgia;
@@ -24,6 +32,8 @@ p{
     margin-top: 50px;
     font-size: 20px;
     margin-top: 30px;
+    font-style: oblique;
+    flex-direction: row;
     
 }
 nav {
@@ -52,6 +62,11 @@ nav ul li a {
     font-size: 25px;
     
 }
+header{
+    position: fixed;
+    width: 100%;
+    top:0;
+}
 
 nav ul li a:hover {
     position: relative; 
@@ -62,7 +77,7 @@ nav ul li a:hover {
 .imagen {
     width: 100px;  
     height: 81px;  
-    position: absolute; 
+    position: fixed;
     top: 0%; 
     left: 0%;
     opacity: 0.7; 
@@ -70,7 +85,13 @@ nav ul li a:hover {
 .fondo{
     width: 100%;  
     height: 25%;
-    margin-top: -10px;
+    margin-top: 75px;
 }   
 
+.item{
+    scroll-margin-top: 20ex;
+}
 
+html{
+    scroll-behavior:smooth;
+}
