arreglo de login.html y su css (input de contraseña: cambio de input type text a password)

--- a/htdocs/CSM/stylelogin.css
+++ b/htdocs/CSM/stylelogin.css
@@ -37,6 +37,7 @@ form {
 
 form input[type="text"],
 form input[type="submit"],
+form input[type="password"],
 form button {
     margin: 10px 0;
     padding: 10px;
