--- a/htdocs/CSM/style.css
+++ b/htdocs/CSM/style.css
@@ -95,3 +95,27 @@ nav ul li a:hover {
 html{
     scroll-behavior:smooth;
 }
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 20px 0;
+    position: relative;
+    bottom: 0;
+    width: 100%;
+}
+footer a {
+    color: #f5f5f5;
+    text-decoration: none;
+    margin: 0 10px;
+}
+footer a:hover {
+    text-decoration: underline;
+}
+.social-icons {
+    margin-top: 10px;
+}
+.social-icons a {
+    margin: 0 5px;
+}
